--- a/CustomProgressView/ProgressBarView.xib
+++ b/CustomProgressView/ProgressBarView.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomProgressbar" customModule="CustomProgressBarSample" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomProgressbar" customModule="CustomProgressViewFramework" customModuleProvider="target">
             <connections>
                 <outlet property="contentView" destination="iN0-l3-epB" id="Ygx-Of-e2v"/>
                 <outlet property="innerBar" destination="SAB-Rn-WzD" id="VCM-1m-3kM"/>
