--- a/CustomProgressViewExample/Base.lproj/Main.storyboard
+++ b/CustomProgressViewExample/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                                     <action selector="resetViewPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6PN-iz-mMY"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LKW-zW-FmJ" customClass="CustomProgressbar" customModule="CustomProgressViewFramework">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LKW-zW-FmJ" customClass="CustomProgressBar" customModule="CustomProgressViewFramework">
                                 <rect key="frame" x="20" y="428" width="374" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
